Some fixes and additions

--- a/builds/build.properties
+++ b/builds/build.properties
@@ -3,6 +3,7 @@ component.name=conepage
 component.uppperName=CONEPAGE
 modules=mod_conepage_navi
 modules_admin=
+plugins=plg_search_matukio=plg_content_creplacements
 ; FTP Options
 ftp.host=example.com
 ftp.port=21
